<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal title</string>
    <string name="price_hint">Price</string>
    <string name="deal_description_hint">Deal description</string>
    <string name="default_text">A place in Cameroon . West Region</string>
    <string name="default_price">50 000 XAF</string>
    <string name="default_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
</resources>
